NS_ECR.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: production
