sidekiq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidekiq
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sidekiq
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: sidekiq
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - args:
        - bundle
        - exec
        - sidekiq
        image: IMAGES
        livenessProbe:
          exec:
            command:
            - ps aux | grep '[s]idekiq 6' || false
        name: sidekiq
        resources: {}
      restartPolicy: Always
