web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: web
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - args:
        - bash
        - -c
        - bundle exec rake db:migrate; rm -f /tmp/pids/server.pid; bundle exec rails s -p 3000
        image: IMAGES
        livenessProbe:
          exec:
            command:
            - wget -q --spider --proxy=off localhost:3000/health || exit 1
        name: web
        ports:
        - containerPort: 3000
        resources: {}
      restartPolicy: Always
