streaming-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: streaming
  name: streaming
  namespace: production
spec:
  ports:
  - name: "4000"
    port: 4000
    targetPort: 4000
  selector:
    io.kompose.service: streaming
status:
  loadBalancer: {}
