web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: web
  name: web
  namespace: production
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    io.kompose.service: web
status:
  loadBalancer: {}
