ingress_and_cm.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: production-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m" # Set maximum request

spec:
  tls:
  - hosts:
    - techopss.space
    - www.techopss.space
    secretName: letsencrypt-production
  rules:
  # - host: juubi.me
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       backend:
  #         service:
  #           name: web
  #           port:
  #             number: 3000
  #       path: /
  - host: www.techopss.space
    http:
      paths:
      - pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 3000
        path: /

  - host: www.techopss.space
    http:
      paths:
      - pathType: Prefix
        backend:
          service:
            name: streaming
            port:
              number: 4000
        path: /api/v1/streaming
